--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ header .fa1{
     border-radius: 50%;
 }
 header h2{
+    margin-top: 20px;
     color: #4284C4;
     font-size: 28px;
     font-weight: 600;
